infra_prov_with_terraform/aws_security_group.tf
# Security group for the load balanceer

resource "aws_security_group" "server-load_balancer_sg"  {
    name        = "server-load-balancer-sg"
    description = "Security group for the load balancer"
    vpc_id      = aws_vpc.server_vpc.id


 ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    
  }

  egress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}


# Security Group to allow port 22, 80 and 443

resource "aws_security_group" "server-security-grp-rule" {
  name        = "allow_ssh_http_https"
  description = "Allow SSH, HTTP and HTTPS inbound traffic for public instances"
  vpc_id      = aws_vpc.server_vpc.id
  

 ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["aws_security_group.server-load_balancer_sg.id"]
    # security_groups = [aws_security_group.server-load_balancer_sg.id]
  }


 ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["aws_security_group.server-load_balancer_sg.id"]
    # security_groups = [aws_security_group.server-load_balancer_sg.id]
  }

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]   
  }

  tags = {
    Name = "server-security-grp-rule"
  }
}
